# six-to-survive

./: AGENTS.md  CHANGELOG.md  README.md  index.html
doc/: README.md  术语表.md
doc/00-产品与原则/: PRD.md
doc/40-版本实施方案/: v0.0.2-手感打磨与玩法深化.md  v0.0.3-三资源手感重构.md  v0.0.4-主动被动分离与词条分级.md  v0.1-MVP-垂直切片.md
doc/决策档案/: 0001-固定居中去掉主动移动.md  0002-纯俯视角替代斜四十五度透视.md  0003-道具系统替代固定主动技能.md  README.md
pack/: go.mod  main.go
pack/Six to Survive.app/Contents/: Info.plist
pack/dist-tauri/: Six-to-Survive-mac.dmg
pack/dist-tauri/Six to Survive.app/Contents/: Info.plist
pack/dist-tauri/Six to Survive.app/Contents/MacOS/: six-to-survive
pack/dist-tauri/Six to Survive.app/Contents/Resources/: Six to Survive.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
