[package]
name = "six-to-survive"
version = "0.0.4"
description = "Six to Survive"
authors = ["you"]
edition = "2021"

[lib]
name = "six_to_survive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
